compilateurDeca/src/test/deca/syntax/valid/objet/protected.deca
// Description:
//   Protégé, liste de champs, = express optionnel, multiple,.
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 15/01/2026
class A {
    protected int x = 1, y;
    float f;
}
{
}
