compilateurDeca/src/test/deca/syntax/invalid/objet/body.deca
// Description:
//   Déclaration de méthode sans corps 
// Resultats:
//    Echec (erreur de syntaxe)
//
// Historique:
//    cree le 15/01/2026

class A {
    int f(int a);
}
{
}
